--- a/packages/ui/styles/constants/_sizes.scss
+++ b/packages/ui/styles/constants/_sizes.scss
@@ -33,3 +33,5 @@ $tooltipMaxWidth: 550px !default;
 $buttonMaxWidth: 300px !default;
 
 $toastMaxWidth: 580px !default;
+
+$inputHeight: $grid * 10 !default;
