--- a/packages/ui/src/RadioGroup.module.scss
+++ b/packages/ui/src/RadioGroup.module.scss
@@ -5,6 +5,11 @@
   display: flex;
   flex-direction: column;
 
+  &:not(.inline) > *:not(:last-child) {
+    // we need to provide spacing between radios if they're in a vertical column
+    margin-bottom: c.$grid;
+  }
+
   &.inline {
     flex-direction: row;
 
