feat: address review comments

--- a/packages/ui/src/TextArea.module.scss
+++ b/packages/ui/src/TextArea.module.scss
@@ -14,7 +14,7 @@
 
   .helperText {
     display: block;
-    margin: c.$grid * 2 0 0 c.$grid * 2;
+    margin: c.$grid 0 0 c.$grid;
   }
 
   .errorContainer {
