Checkbox changed to flex

--- a/packages/ui/src/Checkbox.module.scss
+++ b/packages/ui/src/Checkbox.module.scss
@@ -2,7 +2,7 @@
 @use '../styles/helpers' as h;
 
 .wrapper {
-  display: inline-flex;
+  display: flex;
   flex-direction: row;
   cursor: pointer;
 
