--- a/packages/ui/src/Checkbox.module.scss
+++ b/packages/ui/src/Checkbox.module.scss
@@ -13,6 +13,9 @@
     @include h.visuallyHidden;
   }
 
+.errorContainer {
+  margin-top: c.$grid;
+}
   // default visible checkmark
   .checkmark {
     width: c.$iconSizeSmall;
