feat(ui/card): add card component

--- a/packages/ui/styles/constants/_sizes.scss
+++ b/packages/ui/styles/constants/_sizes.scss
@@ -23,6 +23,9 @@ $outlineWidth: 2px !default;
 
 $iconStrokeWidth: 2px !default;
 
+$cardShadowSize: 1px !default;
+$cardShadowBlur: 4px !default;
+
 $iconSizeSmall: $grid * 4 !default;
 $iconSizeNormal: $grid * 6 !default;
 
