refactor(ui/card): apply suggestions from PR review

--- a/packages/ui/__stories__/utils.scss
+++ b/packages/ui/__stories__/utils.scss
@@ -1,5 +1,11 @@
+@use '../styles/constants' as c;
+
 .wrapperCentered {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.typographyBodySmall {
+  @include c.typographyBodySmall;
 }
