--- a/packages/ui/__stories__/utils.scss
+++ b/packages/ui/__stories__/utils.scss
@@ -3,3 +3,8 @@
   flex-direction: column;
   align-items: center;
 }
+
+.sliderSmallThumb::-webkit-slider-thumb {
+  // this should never be possible to override, this is only for storybook purpose - visual regression testing
+  opacity: 0.5 !important;
+}
