--- a/packages/ui/src/Checkbox.module.scss
+++ b/packages/ui/src/Checkbox.module.scss
@@ -1,7 +1,7 @@
 @use '../styles/constants' as c;
 @use '../styles/helpers' as h;
 
-.wrapper {
+.groupWrapper {
   display: flex;
   flex-direction: row;
   cursor: pointer;
